--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@500&display=swap');
+
+
+:root {
+  --text-color:#124a63;
+  --text-color-secondary:#b3c5cd;
+
+  --primary-color:#21b6b7;
+
+  --background-color:#f9f9f9;
+  --background-color-light:white;
+  --background-color-dark:#eef3f6;
+
+  --font-family: 'Roboto', sans-serif;  
+  --box-shadow: 0px, 2px, 8px, rgba(0,0,0,0.05);
+}
+
+
+[data-theme='dark'] {
+  --text-color:#f0f0f0;
+  --text-color-secondary:#b3c5cd;
+
+  --primary-color:#21b6b7;
+
+  --background-color:#252329;
+  --background-color-light:#3c393f;
+  --background-color-dark:#120f13;
+}
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: var(--font-family);
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 
 a {
@@ -13,4 +42,6 @@ a {
 
 * {
   box-sizing: border-box;
+  color: inherit;
+  font: inherit;
 }
